fixed preview image cropping but not very nicely

--- a/assets/themes/torManifest/css/style.css
+++ b/assets/themes/torManifest/css/style.css
@@ -331,6 +331,23 @@ input[type=submit]:focus{
 #subNav .current_page_item a:active{
   color: #2E301C;
 }
+/* Preview 
+-------------------------------------------------------------------*/
+
+.preview {
+  margin-bottom: 30px;
+}
+.prevImg {
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+}
+.prevImg img {
+  width: 100%;
+  height: 500px;
+}
+
+
 /* Main Content Body
 -------------------------------------------------------------------*/
 
